--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,5 @@
-Django==1.9.5
-djangorestframework==3.3.3
-gunicorn==19.3.0
+Django==2.0.5
+djangorestframework==3.8.2
+gunicorn==19.8.1
+channels==2.1.1
+social-auth-app-django==2.1.0
