Initial rewrite of authenticate view

--- a/core/config/default.yml
+++ b/core/config/default.yml
@@ -1,5 +1,6 @@
 name: default
 debug: true
+security: strict
 host: localhost
 secret: You could teleport yourself to the library bell tower
 database:
